# tourmaline

./: .gitignore  Cargo.toml  README.md  run.sh
cranelift-no_std/: README.md
cranelift-no_std/cranelift-codegen/: Cargo.toml
cranelift-no_std/cranelift-codegen/shared/src/: condcodes.rs  lib.rs
cranelift-no_std/cranelift-frontend/: Cargo.toml
cranelift-no_std/cranelift-wasm/: Cargo.toml
cranelift-no_std/wasmparser-0.39.3/: .cargo_vcs_info.json  Cargo.toml
drivers/: Cargo.toml
drivers/framebuffer/: Cargo.toml
drivers/framebuffer/src/: framebuffer.rs  lib.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml  runner.sh
kernel/conf/: limine.cfg
kernel/src/: acpi.rs  apic.rs  framebuffer.rs  gdt.rs  heap.rs  interrupts.rs  logger.rs  main.rs  memory.rs  panic_handler.rs  ring3.rs
kernel/src/heap/: linked_list_alloc.rs  mod.rs
kernel/src/task_system/: executor.rs  spawner.rs  task.rs
kernel/src/wasm/: address_map.rs  compilation.rs  cranelift.rs  func_env.rs  mod.rs  module.rs  module_env.rs  vmoffsets.rs
kernel_async/: Cargo.toml  build.rs
kernel_async/src/: abi_impl.rs  framebuffer.rs  lib.rs  logger.rs
kernel_async/src/services/: file_descriptor_manager.rs  mod.rs
kernel_common/: Cargo.toml  build.rs
kernel_common/src/: framebuffer.rs  lib.rs  requests.rs  rtc.rs  services.rs
kernel_common/src/driver_common/: command.rs  mod.rs
kernel_common/src/logger/: mod.rs
kernel_common/src/services/: message.rs  mod.rs  service.rs
kernel_common/src/task_system/: delay.rs  executor.rs  mod.rs  scheduler.rs  spawner.rs  task.rs
kernel_common/src/wasm/: abi.rs  abi_trait.rs  async_bridge.rs  backend.rs  code_gen.rs  mod.rs
libfringe/src/: lib.rs
libfringe/src/arch/: x86_64.rs
runner/: Cargo.toml
runner/src/: main.rs
shell/src/: main.rs
soft_kernel_prog/: Cargo.toml
soft_kernel_prog/src/: app.rs  main.rs
src/: main.rs
tourmaline_std/: Cargo.toml
tourmaline_std/src/: abi.rs  lib.rs  promise.rs
tourmaline_std/src/abi/: driver.rs  host.rs  mod.rs
tourmaline_std/src/io/: mod.rs  stdout.rs
wasi_test/: Cargo.toml
wasi_test/src/: main.rs
wasm_compiler/: Cargo.toml
wasm_compiler/src/: lib.rs
wasm_test/: Cargo.toml
wasm_test/src/: lib.rs  main.rs
wasm_test/src/async_env/: mod.rs  task.rs
