[package]
name = "tourmaline"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
wasm_test = { path = "wasm_test", artifact = "cdylib", target = "wasm32-unknown-unknown" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
