[package]
name = "kernel_async"
version = "0.1.0"
edition = "2021"

[build-dependencies]
wasm_test = { path = "../wasm_test", artifact = "cdylib", target = "wasm32-unknown-unknown" }

[dependencies]
kernel_common = { path = "../kernel_common" }

log = "0.4"
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = ["unicode-basic-latin", "regular", "size_16", "size_20", "size_32"] }

spin = { version = "0.9.5", features = ["mutex"] }
