[package]
name = "kernel_async"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel_common = { path = "../kernel_common" }

log = "0.4"
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = ["unicode-basic-latin", "regular", "size_16", "size_20", "size_32"] }

spin = { version = "0.9.5", features = ["mutex"] }
hashbrown = "0.13.2"
async-trait = "0.1.64"
