[package]
name = "kernel_common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
as-any = "0.3.0"
anyhow = { version = "1.0", default-features = false }
sync_wrapper = "0.1.2"
spin = { version = "0.9.5", features = ["mutex"] }
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
futures-task = { version = "0.3.26", default-features = false, features = ["alloc"] }
hashbrown = "0.14.5"
x86_64 = "0.14.10"
cmos-rtc = "0.1.1"
async-trait = "0.1.80"

limine = "0.1.10"

wasmi = { version = "0.31.2", default-features = false }
# wasmtime = { version = "21.0", default-features = false, features = ["runtime"] } # Still broken on no-std lol
